# projects-cc

00.uno/: .gitignore  CMakeLists.txt  conanfile.txt
00.uno/src/: main.cc
01.uno/: .gitignore  CMakeLists.txt  README.md  SimpleModule.cmake  conanfile.py
01.uno/src/: CMakeLists.txt  main.cc  uno.cc  uno.hh  util-test.cc
01.uno/src/uno/: CMakeLists.txt  util.cc  util.hh
01.uno/src/uno/deep/: CMakeLists.txt
01.uno/test/: CMakeLists.txt
01.uno/test/uno/: CMakeLists.txt  util-test.cc
02.uno/: CMakeLists.txt
02.uno/cmake/: SimpleModules.cmake
02.uno/src/: CMakeLists.txt  main.cc  uno.cc  uno.hh
02.uno/src/uno/: util.cc
02.uno/tests/: CMakeLists.txt
02.uno/tests/uno/: CMakeLists.txt  util-test.cc
03.template/: CMakeLists.txt
03.template/cmake/: SimpleModules.cmake
03.template/src/: CMakeLists.txt
03.template/tests/: CMakeLists.txt
04.play/: CMakeLists.txt  clean.sh  conanfile.py  rebuild.sh
04.play/src/: CMakeLists.txt  coros.cc  exceptions.cc  experimental-features.cc  locks.cc  ranges.cc  spans.cc  text-manip.cc  variant.cc
04.play/src/util/: CMakeLists.txt  args_magic.h  log.cc  log.h  str_split.h
04.play/tests/util/: CMakeLists.txt  log-test.cc  memory_counter.h  str_split-test.cc
